--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,10 @@ body {
   margin-top: 10px;
   cursor: pointer;
 }
-
+.container-website{
+  background-color: #ededed;
+  padding-top: 1% !important;
+}
 .grid-container {
   display: grid;
   grid-template-columns:  0.5fr 3fr ;
@@ -46,7 +49,11 @@ body {
   padding: 0 30px 0 30px;
   box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
 }
-
+.link-tag{
+  color: rgba(0, 0, 0, 0.6); /* Đen với độ trong suốt 50% */
+  text-decoration: none;
+  font-family: 'Times New Roman', Times, serif;
+}
 .menu-icon {
   display: none;
 }
@@ -55,6 +62,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.filter h3{
+  color: black;
+  font-size: 30px;
 }
 
 .button-filter{
